# trdb

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  rustfmt.toml  settings.html  src-files.js  trdb.toml
.githooks/: README.md  pre-commit
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  docs.yml
apps/trdb/: Cargo.toml
apps/trdb/src/: config.rs  engine_environment.rs  main.rs
apps/trdbcmd/: Cargo.toml
binary_helpers/: all.html  index.html  sidebar-items.js
binary_helpers/bin_error/: enum.BinaryError.html  index.html  sidebar-items.js
binary_helpers/conversions/: enum.ConversionError.html  index.html  sidebar-items.js  trait.UsizeConversion.html
binary_helpers/le/: fn.read_le.html  fn.write_le.html  index.html  macro.impl_little_endian_integer!.html  macro.impl_little_endian_integer.html  sidebar-items.js  trait.LittleEndianInteger.html
buffer/: all.html  index.html  sidebar-items.js
buffer/buffer/: enum.PageState.html  (+4 more)
file/: all.html  index.html  sidebar-items.js
page/: all.html  constant.HEADER_SIZE.html  constant.PAGE_SIZE.html  index.html  sidebar-items.js
search.index/: 000e27e091e0.js  003d7077789f.js  00d66ae335f5.js  01281896da05.js  0133b8709c3a.js  01d240426d98.js  02182bcf05aa.js  0231d81be587.js  025ab4d8d3eb.js  0261c8b9ace2.js  02648f91941a.js  029809f1b2ce.js  036f4f6c41fc.js  039b645dd1fe.js  03c4d1eaf4bb.js  03dd7c90fa26.js  03f9b87e27a4.js  0528212ecb13.js  055c8cb8af10.js  05718082c5a5.js  06755ec15e8d.js  0692316a0fc6.js  06ca90f4bafb.js  06d468ad7d95.js  071a9551dd67.js  078a5d27b16b.js  07e0bcbca824.js  08054c6bb221.js  08165bebc2f7.js  087e4ff4f71a.js  08c0cc59a320.js  08f593cd5b38.js  090d6499d837.js  096aae6ba336.js  0974680c0508.js  09b86f7cb10c.js  0a7856a4d982.js  0a8e941326c1.js  0af8b5f80268.js  0b51420ae3f5.js  (+517 more)
src/: lib.rs  main.rs
storage_api/: all.html  index.html  sidebar-items.js
trdb/: Cargo.toml  all.html  fn.handle_client.html  fn.init_logging.html  fn.main.html  fn.process_query.html  fn.wait_for_shutdown_signal.html  index.html  sidebar-items.js
trdbcmd/: all.html  fn.main.html  fn.print_result.html  fn.send_and_receive.html  index.html  sidebar-items.js
(+472 files in other folders)
