[workspace]
resolver = "3"
members = ["crates/storage/binary-helpers", "crates/storage/buffer", "crates/storage/file", "crates/storage/page", "crates/storage/storage-api"]

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_imports = "warn"
missing_docs = "allow"
missing_debug_implementations = "warn"

[workspace.dependencies]
thiserror = "2.0.17"
paste = "1.0.15"