[workspace]
resolver = "3"
members = ["crates/storage/binary-helpers", "crates/storage/buffer", "crates/storage/file", "crates/storage/page", "crates/storage/storage-api", "apps/trdbcmd", "apps/trdb"]

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "allow"
unused_imports = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.dependencies]
thiserror = "2.0.17"
paste = "1.0.15"
